Missing Linux lwjgl natives + Wayland Fix + New GL Diagnostics
- Fixed missing line in build.ps1 to include
   lwjgl-3.3.5-natives-linux.jar
   lwjgl-glfw-3.3.5-natives-linux.jar
   lwjgl-opengl-3.3.5-natives-linux.jar

- Wayland error fixed (Due to missing linux.jars)
-New GL diagnostics GPU/Driver